--- a/ChickenPower.BackendForFrontend/appsettings.json
+++ b/ChickenPower.BackendForFrontend/appsettings.json
@@ -5,10 +5,10 @@
     }
   },
   "AppSettings": {
-    "rabbitmq_uri": "rabbitmq://localhost:5672/Total.Sulphur",
+    "rabbitmq_uri": "rabbitmq://rabbit-mq:5672/ChickenPower",
     "rabbitmq_username": "guest",
     "rabbitmq_password": "guest",
-    "rabbitmq_tradeSagaUri": "rabbitmq://localhost:5672/Total.Sulphur/"
+    "rabbitmq_tradeSagaUri": "rabbitmq://rabbit-mq:5672/ChickenPower"
   },
   "AllowedHosts": "*"
 }
