--- a/ChickenPower.StateSaga/Properties/launchSettings.json
+++ b/ChickenPower.StateSaga/Properties/launchSettings.json
@@ -17,7 +17,7 @@
         "ASPNETCORE_ENVIRONMENT": "Development"
       }
     },
-    "SheepPower.StateSaga": {
+    "ChickenPower.StateSaga": {
       "commandName": "Project",
       "launchBrowser": true,
       "launchUrl": "api/values",
