--- a/ChickenPower.Persistence/ChickenPower.Persistence.csproj
+++ b/ChickenPower.Persistence/ChickenPower.Persistence.csproj
@@ -12,8 +12,7 @@
   </ItemGroup>
 
   <ItemGroup>
-    <PackageReference Include="Automatonymous" Version="4.1.6" />
-    <PackageReference Include="MassTransit.Automatonymous" Version="5.5.6" />
+    <PackageReference Include="MassTransit" Version="6.2.2" />
   </ItemGroup>
 
 </Project>
