--- a/ChickenPower.StateSaga/ChickenPower.StateSaga.csproj
+++ b/ChickenPower.StateSaga/ChickenPower.StateSaga.csproj
@@ -7,13 +7,13 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="MassTransit" Version="5.5.6" />
-    <PackageReference Include="MassTransit.Quartz" Version="5.5.6" />
-    <PackageReference Include="MassTransit.SerilogIntegration" Version="5.5.6" />
+    <PackageReference Include="MassTransit" Version="6.2.2" />
+    <PackageReference Include="MassTransit.Quartz" Version="6.2.2" />
     <PackageReference Include="Microsoft.AspNetCore.App" />
     <PackageReference Include="Microsoft.AspNetCore.Razor.Design" Version="2.2.0" PrivateAssets="All" />
     <PackageReference Include="Quartz" Version="3.0.7" />
     <PackageReference Include="Serilog" Version="2.9.0" />
+    <PackageReference Include="Serilog.Extensions.Logging" Version="3.0.1" />
     <PackageReference Include="Serilog.Sinks.Seq" Version="4.0.0" />
   </ItemGroup>
 
